--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,6 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <meta name="google-signin-client_id" content="%REACT_APP_CLIENT_ID%">
     <link rel="stylesheet" href="%PUBLIC_URL%/styles.css">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
@@ -44,6 +43,6 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
     
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script> 
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" ></script> 
   </body>
 </html>
